--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/EditAutomaticEmails.razor
@@ -31,7 +31,7 @@
      <CardBody>
          <div class="container">
                 <div class="row justify-content-center mb-2">
-                    <div class="col-2">
+                    <div class="col-2 pt-2 text-end">
                         @L["TradeName"]
                         <span class="text-danger"> *</span>
                     </div>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center mb-2">
-                    <div class="col-2">
+                    <div class="col-2 pt-2 text-end">
                         @L["RecipientMailbox"]
                         <span class="text-danger"> *</span>
                     </div>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center mb-2">
-                    <div class="col-2">
+                    <div class="col-2 pt-2 text-end">
                         @L["SendInterval"]
                         <span class="text-danger"> *</span>
                     </div>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-center mb-2">
-                    <div class="col-2">
+                    <div class="col-2 pt-2 text-end">
                         @L["SendTime"]
                         <span class="text-danger"> *</span>
                     </div>
@@ -87,7 +87,7 @@
                     <div class="col-3"></div>
                 </div>
                 <div class="row justify-content-center mb-2">
-                    <div class="col-2">
+                    <div class="col-2 pt-2 text-end">
                         @L["SelectGroupBuys"]
                         <span class="text-danger"> *</span>
                     </div>
