--- a/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/ElectronicInvoiceSettings/ElectronicInvoiceSetting.razor
@@ -49,7 +49,7 @@
             <div>
                   <Validations @ref="@CreateValidationsRef" Model="@CreateUpdateElectronicInvoiceDto" ValidateOnLoad="false">
                 <div class=" col-12 row mb-3">
-                    <div class="col-3 text-lg-end pt-2">
+                    <div class="col-3 text-lg-end ">
                         <FieldLabel>@L["Enable/Disable"]</FieldLabel>
                     </div>
                     <div class="col-9">
