logistics settings UI design

--- a/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/CashFlowSettings/CashFlowDealerSettings.razor
@@ -43,7 +43,7 @@
                     </label>
                 </div>
                 <div class="col-6">
-                    <InputText id="channel-id" class="form-control form-control" @bind-Value="LinePay.ChannelId"></InputText>
+                    <InputText id="channel-id" class="form-control" @bind-Value="LinePay.ChannelId"></InputText>
                     <ValidationMessage For="@(() => LinePay.ChannelId)" />
                 </div>
             </div>
