--- a/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/TenantEmailing/CreateAutomaticEmails.razor
@@ -22,6 +22,15 @@
     .tag-input {
         width: 250px !important;
     }
+    .row{
+        margin-bottom: 0.675rem;
+        justify-content: center;
+    }
+
+    .row > div:first-child {
+        text-align: right;
+        padding-top: 0.675rem;
+    }
 </style>
 
 <h3>@L["CreateAutomaticEmails"]</h3>
@@ -30,8 +39,8 @@
  <Card>
      <CardBody>
          <div class="container">
-             <div class="row justify-content-center mb-2">
-                 <div class="col-2 pt-2 text-end">
+             <div class="row">
+                 <div class="col-2">
                      @L["TradeName"]
                      <span class="text-danger"> *</span>
                  </div>
@@ -39,8 +48,8 @@
                      <InputText class="form-control" @bind-Value="Model.TradeName"></InputText>
                  </div>
              </div>
-             <div class="row justify-content-center mb-2">
-                 <div class="col-2 pt-2 text-end">
+             <div class="row">
+                 <div class="col-2">
                      @L["RecipientMailbox"]
                      <span class="text-danger"> *</span>
                  </div>
@@ -49,7 +58,7 @@
                          <div class="input-container d-block mb-2">
                              <InputText class="form-control tag-input" id="tagInput" @bind-Value="Recipient"
                                         placeholder="abc@xyz.com"
-                             @onkeyup="HandleRecipientInputKeyUp"></InputText>
+                             @onkeyup="HandleRecipientInputKeyUp" @onblur="() => HandleRecipientBlur()"></InputText>
                              <i class="tag-input-placeholder-icon fa fa-plus"></i>
                          </div>
 
@@ -60,7 +69,7 @@
                     </div>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-2">
+                <div class="row">
                     <div class="col-2">
                         @L["SendInterval"]
                         <span class="text-danger"> *</span>
@@ -75,7 +84,7 @@
                         <InputDate class="form-control" @bind-Value="Model.EndDate" min="@DateTime.Now.ToString("yyyy-MM-dd")" DisplayName="End Date"></InputDate>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-2">
+                <div class="row">
                     <div class="col-2">
                         @L["SendTime"]
                         <span class="text-danger"> *</span>
@@ -86,7 +95,7 @@
                     <div class="col-1"></div>
                     <div class="col-3"></div>
                 </div>
-                <div class="row justify-content-center mb-2">
+                <div class="row">
                     <div class="col-2">
                         @L["SelectGroupBuys"]
                         <span class="text-danger"> *</span>
@@ -100,15 +109,15 @@
                                     ValueField="@(( item ) => item.Id)"
                                     Placeholder="Search..."
                                     Filter="AutocompleteFilter.StartsWith"
-                                    CustomFilter="@(( item, searchValue ) => item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
-                                    HighlightSearch
+                                    CustomFilter="@(( item, searchValue ) => item.Name != null && item.Name.IndexOf( searchValue, 0, StringComparison.CurrentCultureIgnoreCase ) >= 0 )"
                                     Immediate="true"
                                     SelectionMode="AutocompleteSelectionMode.Multiple"
+                                    @bind-SelectedTexts="SelectedTexts"
                                     @bind-SelectedValues="Model.GroupBuyIds">
-                    </Autocomplete>
+                        </Autocomplete>
                     </div>
                 </div>
-                <div class="row justify-content-center mb-2">
+                <div class="row">
                     <div class="col-2">
                         @L["RecurrenceType"]
                         <span class="text-danger"> *</span>
